--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -91,17 +91,17 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="414"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="504"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <containerView opaque="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qpj-PE-9Wz">
-                                        <rect key="frame" x="0.0" y="414" width="600" height="0.0"/>
+                                        <rect key="frame" x="0.0" y="504" width="600" height="0.0"/>
                                         <connections>
                                             <segue destination="BZJ-cT-0Rw" kind="embed" id="pmK-ua-5nR"/>
                                         </connections>
                                     </containerView>
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y2p-AU-EyF">
-                                        <rect key="frame" x="0.0" y="414" width="600" height="186"/>
+                                        <rect key="frame" x="0.0" y="504" width="600" height="97"/>
                                         <items>
                                             <barButtonItem style="plain" systemItem="flexibleSpace" id="Hrk-74-gZP"/>
                                             <barButtonItem image="topBottomUnselected" id="Jxs-yj-rgW">
@@ -120,7 +120,7 @@
                                     </toolbar>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Qpj-PE-9Wz" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="bottom" id="5ob-h2-dhb"/>
+                                    <constraint firstItem="Qpj-PE-9Wz" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="bottom" constant="100" id="5ob-h2-dhb"/>
                                     <constraint firstItem="y2p-AU-EyF" firstAttribute="top" secondItem="Qpj-PE-9Wz" secondAttribute="top" id="cSo-PX-aed"/>
                                 </constraints>
                             </stackView>
