TopBottom and LeftRight layouts working

--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -121,24 +121,6 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hu3-fH-eJk">
                                         <rect key="frame" x="0.0" y="36" width="414" height="414"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OsU-33-awx">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
-                                                <subviews>
-                                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="4x9-My-hZt">
-                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
-                                                        <connections>
-                                                            <outlet property="delegate" destination="AIB-wN-uwu" id="iTx-uj-1qX"/>
-                                                        </connections>
-                                                    </scrollView>
-                                                </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="4x9-My-hZt" secondAttribute="trailing" id="RnW-Z6-URF"/>
-                                                    <constraint firstAttribute="bottom" secondItem="4x9-My-hZt" secondAttribute="bottom" id="TLQ-HK-9Ux"/>
-                                                    <constraint firstItem="4x9-My-hZt" firstAttribute="top" secondItem="OsU-33-awx" secondAttribute="top" id="ffC-Ib-ATm"/>
-                                                    <constraint firstItem="4x9-My-hZt" firstAttribute="leading" secondItem="OsU-33-awx" secondAttribute="leading" id="ql2-7i-fdh"/>
-                                                </constraints>
-                                            </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hTc-NQ-pjG">
                                                 <rect key="frame" x="0.0" y="207" width="414" height="207"/>
                                                 <subviews>
@@ -149,7 +131,7 @@
                                                         </connections>
                                                     </scrollView>
                                                 </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <color key="backgroundColor" red="0.99481526170000001" green="1" blue="0.069629195029999993" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="Xkt-fU-ajC" secondAttribute="trailing" id="Hcj-5x-Ena"/>
                                                     <constraint firstItem="Xkt-fU-ajC" firstAttribute="top" secondItem="hTc-NQ-pjG" secondAttribute="top" id="e1p-W5-Hn2"/>
@@ -157,8 +139,26 @@
                                                     <constraint firstItem="Xkt-fU-ajC" firstAttribute="leading" secondItem="hTc-NQ-pjG" secondAttribute="leading" id="myD-m2-MI3"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OsU-33-awx">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+                                                <subviews>
+                                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="4x9-My-hZt">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="AIB-wN-uwu" id="iTx-uj-1qX"/>
+                                                        </connections>
+                                                    </scrollView>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.52931540030000002" green="0.91590544870000001" blue="0.87043815879999997" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="4x9-My-hZt" secondAttribute="trailing" id="RnW-Z6-URF"/>
+                                                    <constraint firstAttribute="bottom" secondItem="4x9-My-hZt" secondAttribute="bottom" id="TLQ-HK-9Ux"/>
+                                                    <constraint firstItem="4x9-My-hZt" firstAttribute="top" secondItem="OsU-33-awx" secondAttribute="top" id="ffC-Ib-ATm"/>
+                                                    <constraint firstItem="4x9-My-hZt" firstAttribute="leading" secondItem="OsU-33-awx" secondAttribute="leading" id="ql2-7i-fdh"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.58280308420000004" green="0.79040464740000005" blue="0.19517801730000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="hTc-NQ-pjG" firstAttribute="width" secondItem="Hu3-fH-eJk" secondAttribute="width" id="2lT-Kq-REq"/>
                                             <constraint firstItem="hTc-NQ-pjG" firstAttribute="top" secondItem="OsU-33-awx" secondAttribute="bottom" id="44j-Ob-pqA"/>
