--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -125,7 +125,8 @@
                                                 <rect key="frame" x="0.0" y="207" width="414" height="207"/>
                                                 <subviews>
                                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Xkt-fU-ajC">
-                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+                                                        <rect key="frame" x="-1" y="0.0" width="415" height="207"/>
+                                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <connections>
                                                             <outlet property="delegate" destination="AIB-wN-uwu" id="rr3-qX-oh5"/>
                                                         </connections>
@@ -136,14 +137,15 @@
                                                     <constraint firstAttribute="trailing" secondItem="Xkt-fU-ajC" secondAttribute="trailing" id="Hcj-5x-Ena"/>
                                                     <constraint firstItem="Xkt-fU-ajC" firstAttribute="top" secondItem="hTc-NQ-pjG" secondAttribute="top" id="e1p-W5-Hn2"/>
                                                     <constraint firstAttribute="bottom" secondItem="Xkt-fU-ajC" secondAttribute="bottom" id="fjl-n8-0Pq"/>
-                                                    <constraint firstItem="Xkt-fU-ajC" firstAttribute="leading" secondItem="hTc-NQ-pjG" secondAttribute="leading" id="myD-m2-MI3"/>
+                                                    <constraint firstItem="Xkt-fU-ajC" firstAttribute="leading" secondItem="hTc-NQ-pjG" secondAttribute="leading" constant="-1" id="myD-m2-MI3"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OsU-33-awx">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
                                                 <subviews>
                                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="4x9-My-hZt">
-                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="207"/>
+                                                        <rect key="frame" x="-1" y="0.0" width="415" height="207"/>
+                                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                         <connections>
                                                             <outlet property="delegate" destination="AIB-wN-uwu" id="iTx-uj-1qX"/>
                                                         </connections>
@@ -154,7 +156,7 @@
                                                     <constraint firstAttribute="trailing" secondItem="4x9-My-hZt" secondAttribute="trailing" id="RnW-Z6-URF"/>
                                                     <constraint firstAttribute="bottom" secondItem="4x9-My-hZt" secondAttribute="bottom" id="TLQ-HK-9Ux"/>
                                                     <constraint firstItem="4x9-My-hZt" firstAttribute="top" secondItem="OsU-33-awx" secondAttribute="top" id="ffC-Ib-ATm"/>
-                                                    <constraint firstItem="4x9-My-hZt" firstAttribute="leading" secondItem="OsU-33-awx" secondAttribute="leading" id="ql2-7i-fdh"/>
+                                                    <constraint firstItem="4x9-My-hZt" firstAttribute="leading" secondItem="OsU-33-awx" secondAttribute="leading" constant="-1" id="ql2-7i-fdh"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
