--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -31,9 +31,9 @@
                                     <action selector="shutterButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kLH-NL-DV7"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TMN-mf-aEW">
-                                <rect key="frame" x="542" y="28" width="30" height="30"/>
-                                <state key="normal" title="🔁"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TMN-mf-aEW">
+                                <rect key="frame" x="533" y="30" width="49" height="25"/>
+                                <state key="normal" image="switchCameraButton"/>
                                 <connections>
                                     <action selector="switchCameraButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iIi-4d-pQC"/>
                                 </connections>
@@ -320,5 +320,6 @@
     <resources>
         <image name="filter_icon" width="22" height="22"/>
         <image name="layout_corner" width="22" height="22"/>
+        <image name="switchCameraButton" width="27" height="25"/>
     </resources>
 </document>
